# ------------------------------------------------
# Init
# ------------------------------------------------

AC_INIT([boost_spirit_test], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE(
    [-Wall -Werror foreign]
)
AC_PROG_CXX
AC_LANG(C++)

AX_BOOST_BASE([1.58.0]) 

AC_CONFIG_HEADERS(
    [autoConfig.h]
)
AC_CONFIG_FILES(
    [Makefile
    src/Makefile]
)

# ------------------------------------------------
# Output
# ------------------------------------------------

AC_OUTPUT

